--- a/render.yaml
+++ b/render.yaml
@@ -3,13 +3,8 @@ services:
     name: sumai-api
     env: python
     buildCommand: |
-      apt-get update && apt-get install -y wget unzip gnupg
-      wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-      apt install -y ./google-chrome-stable_current_amd64.deb
-      wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-      unzip chromedriver_linux64.zip
-      mv chromedriver /usr/bin/chromedriver
-      chmod +x /usr/bin/chromedriver
+      apt-get update && \
+      apt-get install -y chromium-browser chromium-driver && \
       pip install -r requirements.txt
     startCommand: python sumai_selenium_api.py
     envVars:
