--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,10 @@
 services:
   - type: web
     name: sumai-api
-    env: python
-    buildCommand: |
-      apt-get update && \
-      apt-get install -y chromium-browser chromium-driver && \
-      pip install -r requirements.txt
-    startCommand: python sumai_selenium_api.py
+    env: docker
+    plan: starter
+    region: oregon
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         value: 10000
