--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: sumai-api
     env: docker
-    plan: starter
-    region: oregon
+    plan: free
+    region: singapore
     dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
